litmask/tests/compile/masked_serialize_enum.stderr
error: MaskedSerialize! grammar: supports structs with named fields only
 --> tests/compile/masked_serialize_enum.rs:7:6
  |
7 | enum CovertChannel {
  |      ^^^^^^^^^^^^^
